<resources>
    <string name="app_name">Grocer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="version">Version .0.01a</string>

    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string name="name">Name</string>
    <string name="note">Note</string>

    <string name="ad_name_hint">Milk</string>
    <string name="ad_note_hint">2%</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="optional">Optional</string>
    <string name="qty">Quantity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_string_auth">Logging in allows you to share your grocery list with other users, as well as store all your data on the cloud.</string>
    <string name="pref_string_summary_ecc">When selected, any items on your grocery list that are checked off will be removed on the next sort.</string>
    <string name="pref_string_ecc">Delete Checked Items On Sort</string>
    <string name="pref_string_app_settings">Application Settings</string>
</resources>
