<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:title="Account Settings">
        <Preference
            android:key="pref_auth"
            android:title="Login"
            android:summary="@string/pref_string_auth"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_string_app_settings">

        <CheckBoxPreference
            android:key="pref_enable_clear_checked"
            android:title="@string/pref_string_ecc"
            android:summary="@string/pref_string_summary_ecc"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>
